src/akin/lang/AkinParser.java
// $ANTLR 3.1.1 AkinParser.g 2013-02-21 00:37:27

  package akin.lang;
  
  import akin.lang.nodes.*;
  import java.util.ArrayList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class AkinParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ORE", "ANDE", "CLASS", "DEF", "IF", "NOTE", "ELSE", "WHILE", "TRY", "CATCH", "END", "SELF", "NIL", "TRUE", "FALSE", "IS", "A", "TYPE", "OF", "THAN", "GREATER", "EQUAL", "TO", "ISTO", "CAN", "THE", "OET", "GTT", "LTT", "ETT", "ISATYPEOF", "MAKE", "OFTHIS", "EPLUS", "EADD", "EMINUS", "ESUBTRACT", "EMULTIPLY", "EDIVIDE", "USING", "THISCAN", "THIS", "WHICHISTO", "WHICH", "IT", "ALSO", "DOTHEFOLLOWING", "YOU", "WITH", "THEN", "TRYTO", "INCREASING", "DECREASING", "TIMES", "INCREMENTING", "BY", "FROM", "STARTING", "MAKETHECOMPUTER", "CALCULATE", "UNTIL", "UNTILL", "ENDMETHODCALL", "GET", "KEEPDOINGTHEFOLLOWING", "KEEPDOINGTHEFOLLOWINGG", "ENDD", "INTEGER", "FLOAT", "DIGIT", "NUMBER", "STRING", "LOWER", "ID_CHAR", "NAME", "UPPER", "CONSTANT", "SNAME", "SEMICOLON", "COLON", "DOT", "COMMA", "OPEN_PARENT", "CLOSE_PARENT", "AT", "EQ", "LE", "GE", "NE", "LT", "GT", "PLUS", "MINUS", "MUL", "DIV", "MOD", "AND", "OR", "NOT", "ASSIGN", "NEWLINE", "COMMENT", "SPACE", "WHITESPACE", "DOTSPACE", "LETTER", "HAS"
    };
    public static final int LT=93;
    public static final int WHILE=11;
    public static final int WHICHISTO=46;
    public static final int LETTER=109;
    public static final int MOD=99;
    public static final int DOTHEFOLLOWING=50;
    public static final int NOT=102;
    public static final int EOF=-1;
    public static final int ISATYPEOF=34;
    public static final int TYPE=21;
    public static final int HAS=110;
    public static final int ENDMETHODCALL=66;
    public static final int NAME=78;
    public static final int GREATER=24;
    public static final int THAN=23;
    public static final int USING=43;
    public static final int EADD=38;
    public static final int THIS=45;
    public static final int GET=67;
    public static final int EQ=89;
    public static final int DECREASING=56;
    public static final int COMMENT=105;
    public static final int YOU=51;
    public static final int NE=92;
    public static final int GE=91;
    public static final int A=20;
    public static final int ELSE=10;
    public static final int NUMBER=74;
    public static final int WHITESPACE=107;
    public static final int SEMICOLON=82;
    public static final int ETT=33;
    public static final int OF=22;
    public static final int MUL=97;
    public static final int TRY=12;
    public static final int OET=30;
    public static final int THISCAN=44;
    public static final int EMULTIPLY=41;
    public static final int NIL=16;
    public static final int SNAME=81;
    public static final int ESUBTRACT=40;
    public static final int CALCULATE=63;
    public static final int UNTIL=64;
    public static final int ALSO=49;
    public static final int GTT=31;
    public static final int OR=101;
    public static final int CLOSE_PARENT=87;
    public static final int CONSTANT=80;
    public static final int GT=94;
    public static final int LOWER=76;
    public static final int CATCH=13;
    public static final int END=14;
    public static final int FROM=60;
    public static final int FALSE=18;
    public static final int ENDD=70;
    public static final int ANDE=5;
    public static final int UPPER=79;
    public static final int CLASS=6;
    public static final int DEF=7;
    public static final int KEEPDOINGTHEFOLLOWING=68;
    public static final int THE=29;
    public static final int ID_CHAR=77;
    public static final int MAKETHECOMPUTER=62;
    public static final int FLOAT=72;
    public static final int OFTHIS=36;
    public static final int AND=100;
    public static final int SPACE=106;
    public static final int ORE=4;
    public static final int CAN=28;
    public static final int IF=8;
    public static final int AT=88;
    public static final int THEN=53;
    public static final int COMMA=85;
    public static final int IS=19;
    public static final int NOTE=9;
    public static final int IT=48;
    public static final int INCREMENTING=58;
    public static final int EQUAL=25;
    public static final int PLUS=95;
    public static final int DIGIT=73;
    public static final int DOT=84;
    public static final int WITH=52;
    public static final int WHICH=47;
    public static final int INTEGER=71;
    public static final int BY=59;
    public static final int DOTSPACE=108;
    public static final int TO=26;
    public static final int MAKE=35;
    public static final int ISTO=27;
    public static final int KEEPDOINGTHEFOLLOWINGG=69;
    public static final int MINUS=96;
    public static final int TRYTO=54;
    public static final int TRUE=17;
    public static final int COLON=83;
    public static final int EDIVIDE=42;
    public static final int UNTILL=65;
    public static final int INCREASING=55;
    public static final int NEWLINE=104;
    public static final int EMINUS=39;
    public static final int LTT=32;
    public static final int OPEN_PARENT=86;
    public static final int STARTING=61;
    public static final int ASSIGN=103;
    public static final int EPLUS=37;
    public static final int DIV=98;
    public static final int TIMES=57;
    public static final int SELF=15;
    public static final int LE=90;
    public static final int STRING=75;

    // delegates
    // delegators


        public AkinParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public AkinParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return AkinParser.tokenNames; }
    public String getGrammarFileName() { return "AkinParser.g"; }


      /**
        Run the parsing process and return the root node of the AST.
      */
      public Node parse() throws RecognitionException {
        root_return result = root();
        if (result == null) return null;
        return result.nodes;
      }
      
      // Override to throw exceptions on parse error.
      @Override
      public void reportError(RecognitionException e) {
        throw new RuntimeException(e);
      }


    public static class root_return extends ParserRuleReturnScope {
        public Nodes nodes;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "root"
    // AkinParser.g:55:1: root returns [Nodes nodes] : ( terminator )? ( expressions )? EOF ;
    public final AkinParser.root_return root() throws RecognitionException {
        AkinParser.root_return retval = new AkinParser.root_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF3=null;
        AkinParser.terminator_return terminator1 = null;

        AkinParser.expressions_return expressions2 = null;


        Object EOF3_tree=null;

        try {
            // AkinParser.g:55:27: ( ( terminator )? ( expressions )? EOF )
            // AkinParser.g:56:5: ( terminator )? ( expressions )? EOF
            {
            root_0 = (Object)adaptor.nil();

            // AkinParser.g:56:5: ( terminator )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( ((LA1_0>=SEMICOLON && LA1_0<=COLON)||LA1_0==COMMA||LA1_0==NEWLINE) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // AkinParser.g:0:0: terminator
                    {
                    pushFollow(FOLLOW_terminator_in_root77);
                    terminator1=terminator();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, terminator1.getTree());

                    }
                    break;

            }

            // AkinParser.g:56:17: ( expressions )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==IF||(LA2_0>=WHILE && LA2_0<=TRY)||(LA2_0>=SELF && LA2_0<=FALSE)||LA2_0==A||LA2_0==TO||LA2_0==THE||LA2_0==MAKE||LA2_0==EADD||(LA2_0>=ESUBTRACT && LA2_0<=EDIVIDE)||LA2_0==THIS||LA2_0==IT||(LA2_0>=DOTHEFOLLOWING && LA2_0<=YOU)||LA2_0==MAKETHECOMPUTER||(LA2_0>=KEEPDOINGTHEFOLLOWING && LA2_0<=KEEPDOINGTHEFOLLOWINGG)||(LA2_0>=INTEGER && LA2_0<=FLOAT)||LA2_0==STRING||LA2_0==NAME||LA2_0==CONSTANT||LA2_0==OPEN_PARENT||LA2_0==AT||LA2_0==NOT) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // AkinParser.g:0:0: expressions
                    {
                    pushFollow(FOLLOW_expressions_in_root80);
                    expressions2=expressions();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, expressions2.getTree());

                    }
                    break;

            }

            EOF3=(Token)match(input,EOF,FOLLOW_EOF_in_root83); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
               retval.nodes = (expressions2!=null?expressions2.nodes:null); 
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

          catch(RecognitionException recognitionException) {
            throw recognitionException;
          }
        finally {
        }
        return retval;
    }
    // $ANTLR end "root"

    public static class expressions_return extends ParserRuleReturnScope {
        public Nodes nodes;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expressions"
    // AkinParser.g:60:1: expressions returns [Nodes nodes] : head= expression ( terminator tail= expression )* ( terminator )? ;
    public final AkinParser.expressions_return expressions() throws RecognitionException {
        AkinParser.expressions_return retval = new AkinParser.expressions_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        AkinParser.expression_return head = null;

        AkinParser.expression_return tail = null;

        AkinParser.terminator_return terminator4 = null;

        AkinParser.terminator_return terminator5 = null;



        try {
            // AkinParser.g:60:34: (head= expression ( terminator tail= expression )* ( terminator )? )
            // AkinParser.g:61:23: head= expression ( terminator tail= expression )* ( terminator )?
            {
            root_0 = (Object)adaptor.nil();

            if ( state.backtracking==0 ) {
               retval.nodes = new Nodes(); 
            }
            pushFollow(FOLLOW_expression_in_expressions131);
            head=expression();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, head.getTree());
            if ( state.backtracking==0 ) {
               retval.nodes.add((head!=null?head.node:null)); 
            }
            // AkinParser.g:63:5: ( terminator tail= expression )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==COMMA) ) {
                    int LA3_1 = input.LA(2);

                    if ( (synpred3_AkinParser()) ) {
                        alt3=1;
                    }


                }
                else if ( ((LA3_0>=SEMICOLON && LA3_0<=COLON)||LA3_0==NEWLINE) ) {
                    int LA3_3 = input.LA(2);

                    if ( (synpred3_AkinParser()) ) {
                        alt3=1;
                    }


                }


                switch (alt3) {
            	case 1 :
            	    // AkinParser.g:63:6: terminator tail= expression
            	    {
            	    pushFollow(FOLLOW_terminator_in_expressions142);
            	    terminator4=terminator();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, terminator4.getTree());
            	    pushFollow(FOLLOW_expression_in_expressions151);
            	    tail=expression();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, tail.getTree());
            	    if ( state.backtracking==0 ) {
            	       retval.nodes.add((tail!=null?tail.node:null)); 
            	    }

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            // AkinParser.g:66:5: ( terminator )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==COMMA) ) {
                int LA4_1 = input.LA(2);

                if ( (synpred4_AkinParser()) ) {
                    alt4=1;
                }
            }
            else if ( ((LA4_0>=SEMICOLON && LA4_0<=COLON)||LA4_0==NEWLINE) ) {
                int LA4_3 = input.LA(2);

                if ( (synpred4_AkinParser()) ) {
                    alt4=1;
                }
            }
            switch (alt4) {
                case 1 :
                    // AkinParser.g:0:0: terminator
                    {
                    pushFollow(FOLLOW_terminator_in_expressions167);
                    terminator5=terminator();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, terminator5.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

          catch(RecognitionException recognitionException) {
            throw recognitionException;
          }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expressions"

    public static class expression_return extends ParserRuleReturnScope {
        public Node node;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expression"
    // AkinParser.g:70:1: expression returns [Node node] : assignExpression ;
    public final AkinParser.expression_return expression() throws RecognitionException {
        AkinParser.expression_return retval = new AkinParser.expression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        AkinParser.assignExpression_return assignExpression6 = null;



        try {
            // AkinParser.g:70:31: ( assignExpression )
            // AkinParser.g:71:5: assignExpression
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_assignExpression_in_expression187);
            assignExpression6=assignExpression();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, assignExpression6.getTree());
            if ( state.backtracking==0 ) {
               retval.node = (assignExpression6!=null?assignExpression6.node:null); 
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

          catch(RecognitionException recognitionException) {
            throw recognitionException;
          }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expression"

    public static class terminator_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "terminator"
    // AkinParser.g:75:1: terminator : ( NEWLINE | SEMICOLON | COLON | COMMA )+ ;
    public final AkinParser.terminator_return terminator() throws RecognitionException {
        AkinParser.terminator_return retval = new AkinParser.terminator_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token set7=null;

        Object set7_tree=null;

        try {
            // AkinParser.g:75:11: ( ( NEWLINE | SEMICOLON | COLON | COMMA )+ )
            // AkinParser.g:75:13: ( NEWLINE | SEMICOLON | COLON | COMMA )+
            {
            root_0 = (Object)adaptor.nil();

            // AkinParser.g:75:13: ( NEWLINE | SEMICOLON | COLON | COMMA )+
            int cnt5=0;
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==COMMA) ) {
                    alt5=1;
                }
                else if ( ((LA5_0>=SEMICOLON && LA5_0<=COLON)||LA5_0==NEWLINE) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // AkinParser.g:
            	    {
            	    set7=(Token)input.LT(1);
            	    if ( (input.LA(1)>=SEMICOLON && input.LA(1)<=COLON)||input.LA(1)==COMMA||input.LA(1)==NEWLINE ) {
            	        input.consume();
            	        if ( state.backtracking==0 ) adaptor.addChild(root_0, (Object)adaptor.create(set7));
            	        state.errorRecovery=false;state.failed=false;
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return retval;}
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    }
            	    break;

            	default :
            	    if ( cnt5 >= 1 ) break loop5;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(5, input);
                        throw eee;
                }
                cnt5++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

          catch(RecognitionException recognitionException) {
            throw recognitionException;
          }
        finally {
        }
        return retval;
    }
    // $ANTLR end "terminator"

    public static class assignExpression_return extends ParserRuleReturnScope {
        public Node node;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "assignExpression"
    // AkinParser.g:81:1: assignExpression returns [Node node] : ( assign | e= orExpression );
    public final AkinParser.assignExpression_return assignExpression() throws RecognitionException {
        AkinParser.assignExpression_return retval = new AkinParser.assignExpression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        AkinParser.orExpression_return e = null;

        AkinParser.assign_return assign8 = null;



        try {
            // AkinParser.g:81:37: ( assign | e= orExpression )
            int alt6=2;
            switch ( input.LA(1) ) {
            case NAME:
                {
                int LA6_1 = input.LA(2);

                if ( (LA6_1==ASSIGN) ) {
                    alt6=1;
                }
                else if ( (LA6_1==EOF||(LA6_1>=ORE && LA6_1<=ANDE)||LA6_1==IF||LA6_1==ELSE||(LA6_1>=CATCH && LA6_1<=END)||(LA6_1>=GTT && LA6_1<=ETT)||LA6_1==THEN||LA6_1==MAKETHECOMPUTER||LA6_1==NAME||(LA6_1>=SEMICOLON && LA6_1<=CLOSE_PARENT)||(LA6_1>=EQ && LA6_1<=OR)||LA6_1==NEWLINE) ) {
                    alt6=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 1, input);

                    throw nvae;
                }
                }
                break;
            case CONSTANT:
                {
                int LA6_2 = input.LA(2);

                if ( (LA6_2==ASSIGN) ) {
                    alt6=1;
                }
                else if ( (LA6_2==EOF||(LA6_2>=ORE && LA6_2<=ANDE)||LA6_2==IF||LA6_2==ELSE||(LA6_2>=CATCH && LA6_2<=END)||(LA6_2>=GTT && LA6_2<=ISATYPEOF)||LA6_2==THEN||(LA6_2>=SEMICOLON && LA6_2<=COMMA)||LA6_2==CLOSE_PARENT||(LA6_2>=EQ && LA6_2<=OR)||LA6_2==NEWLINE) ) {
                    alt6=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 2, input);

                    throw nvae;
                }
                }
                break;
            case AT:
                {
                int LA6_3 = input.LA(2);

                if ( (LA6_3==NAME) ) {
                    int LA6_6 = input.LA(3);

                    if ( (LA6_6==ASSIGN) ) {
                        alt6=1;
                    }
                    else if ( (LA6_6==EOF||(LA6_6>=ORE && LA6_6<=ANDE)||LA6_6==IF||LA6_6==ELSE||(LA6_6>=CATCH && LA6_6<=END)||(LA6_6>=GTT && LA6_6<=ETT)||LA6_6==THEN||(LA6_6>=SEMICOLON && LA6_6<=COMMA)||LA6_6==CLOSE_PARENT||(LA6_6>=EQ && LA6_6<=OR)||LA6_6==NEWLINE) ) {
                        alt6=2;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 6, 6, input);

                        throw nvae;
                    }
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 3, input);

                    throw nvae;
                }
                }
                break;
            case IF:
            case WHILE:
            case TRY:
            case SELF:
            case NIL:
            case TRUE:
            case FALSE:
            case A:
            case TO:
            case THE:
            case MAKE:
            case EADD:
            case ESUBTRACT:
            case EMULTIPLY:
            case EDIVIDE:
            case THIS:
            case IT:
            case DOTHEFOLLOWING:
            case YOU:
            case MAKETHECOMPUTER:
            case KEEPDOINGTHEFOLLOWING:
            case KEEPDOINGTHEFOLLOWINGG:
            case INTEGER:
            case FLOAT:
            case STRING:
            case OPEN_PARENT:
            case NOT:
                {
                alt6=2;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }

            switch (alt6) {
                case 1 :
                    // AkinParser.g:82:5: assign
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_assign_in_assignExpression239);
                    assign8=assign();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, assign8.getTree());
                    if ( state.backtracking==0 ) {
                       retval.node = (assign8!=null?assign8.node:null); 
                    }
